--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@
  * 2. The font is a monospaced font
  * (all other design decisions are up to you)
  */
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+#textinput {
+    background-color: darkgray;
+    font-family: monospace;
+    font-size: xx-large;
+}
+input {
+    outline: none;
+    border-width: 0 0 8px;
+    border-color: blue;
+    width: fit-content;
+}
+input:focus {
+    border-color: green;
+}
